--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-MEASUREMENT_ID');
+      gtag('config', 'G-3DHCK7TMT3');
     </script>
   </head>
   <body class="antialiased">
